--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout The Code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       # Setup JDK
       - name: Setup JDK 11
         uses: actions/setup-java@v1
