--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         google()
         mavenCentral()
     }
+    ext {
+        compose_version = '1.1.1'
+    }
     dependencies {
         def nav_version = "2.4.1"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
